--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             background: url(MOMOCI.png);
             background-repeat: no-repeat;
             background-position-x:center;
+            background-position-y:bottom;
+            height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
